// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test 'FavoriteButton' FavoriteButton in the Offer component should render correctly 1`] = `
<div>
  <button
    class="place-card__bookmark-button
       button"
    type="button"
  >
    <svg
      class="place-card__bookmark-icon"
      height="19"
      width="18"
    >
      <use
        xlink:href="#icon-bookmark"
      />
    </svg>
    <span
      class="visually-hidden"
    >
      To bookmarks
    </span>
  </button>
</div>
`;

exports[`Test 'FavoriteButton' FavoriteButton in the OfferScreen component should render correctly 1`] = `
<div>
  <button
    class="property__bookmark-button
      property__bookmark-button--active button"
    type="button"
  >
    <svg
      class="property__bookmark-icon"
      height="33"
      width="31"
    >
      <use
        xlink:href="#icon-bookmark"
      />
    </svg>
    <span
      class="visually-hidden"
    >
      To bookmarks
    </span>
  </button>
</div>
`;
